Fixed icons alignment and home page background

--- a/greenair-website/src/Socials_component/Socials.css
+++ b/greenair-website/src/Socials_component/Socials.css
@@ -5,10 +5,10 @@
     justify-content: center;
     gap: 300px;
     font-size: 35px;
-    position:fixed;
-    left: 320px;
-    bottom:20px;
+   
+    margin-bottom:40px;
     flex-direction: row;
+    justify-self: center;
     
     
 }
@@ -16,7 +16,8 @@
 .footer-icon{
     
     color: #3C4A3F;
-    justify-items: center; 
+    justify-items: center;
+    justify-self: center; 
     
     
 
