--- a/greenair-website/src/pages/Home.css
+++ b/greenair-website/src/pages/Home.css
@@ -1,5 +1,7 @@
 #home_container {
   background-image: url(../images/Homepage.jpg);
+  background-repeat: no-repeat;
+  background-size: 100%;
   min-height: 110vh;
   overflow-x: hidden;
 }
@@ -46,8 +48,8 @@ body, html {
 
 .weatherWidget {
   width:100%;
-display:block;
-margin-top: 190px;
+  display:block;
+  margin-top: 170px;
   margin-left: auto;
   margin-right: auto;
 
